web/src/css/checkout.css
.spring-green{
  color:#66ff00;
}
.disabled-button{
  opacity: 0.5;
}
.button--where:hover{
  text-decoration: underline;
}
#question-trigger{
  display: inline-block;
  background: white;
  color:#808080;
  font-size:18px;
  padding:5px 5px;
  position: relative;
  /*was 5px before*/
  left:2px;
  cursor:pointer;
  line-height: 0.5;
  border-radius:50px; 
}
.home-deposit-module  #refund-message *{
  color:black;
    stroke: black;

}
.home-deposit-module  #refund-message #close-refund svg{
  width:50px;
  transform:rotate(45deg);
  cursor: pointer;
}
.home-deposit-module  #refund-message p{
  max-width: calc(100% - 30px);
}
.home-deposit-module  #refund-message {
  background: white;
  box-shadow: 0px 0px 12px 4px rgba(255, 255, 255, 0.65);
  margin-top:-150px;
}
.special-bitcoin{
/*  background-image: url("./bit-icons-01.png");*/
  background-size: 55%;
  background-repeat:no-repeat;
  background-position:center center;
}
/* pay language 14px and terms matches*/
.stripe-button, .bit-button{
  position:relative;
  font-size:1.125rem;
}
.stripe-button, .bit-button{
  color:black;
}
.stripe-button img, .bit-button img{
  position:absolute;
  height:25px;
  top: 50%;
  pointer-events: none;
  left:auto;
  right:16px;
  z-index: 2;
  transform: translate(0%, -50%);
}
.stripe-button input, .bit-button input{
  text-transform: uppercase;
}
.stripe-button.bit-button img{
  position:absolute;
  height:25px;
  top: 50%;
  pointer-events: none;
  left:auto;
  right:16px;
  z-index: 2;
  transform: translate(0%, -50%);
}
.stripe-button img, .stripe-button.bit-button img{
  height:18px;
  position:absolute;
  top: 50%;
/*  left: calc(50% - 115px);*/
  z-index: 2;
  transform: translate(0%, -50%);
}
.stripe-button.bit-button img{
  height:18px;
  position:absolute;
  top: calc(50% + 3px);
/*    left: calc(50% - 72px);*/
  z-index: 2;
  transform: translate(0%, -50%);
}
/*DEPOSIT BLOCK*/
.home-deposit-module *{
  color:black;
}
.special-bitcoin{
color:black;
/*text-transform: none;*/
}
.home-deposit-module::before{
  background: #E5E5E5;
  content:"";
  top:0;
  left:-27px;
  display: block;
  position: absolute;
  width:100vw;
  height:100%;
}
.home-deposit-module {
  color:white;
  background: #E5E5E5;
  position: relative;
  margin-top: 5rem;
  padding-left: 6.5vw;
}
.home-deposit-module-scroll{
  z-index: 10;
}
.dark-theme{
  background:#E5E5E5;
}
.home-deposit-module label{
  color:white;
}
.home-deposit-module .special-stripe{
  color:black;
/*  text-transform: none;*/
}
.black-footer{
  background: #171717;
}
.black-header{
  color:white;
}
.black-header .bg-white {
  color:black;
}
.membership-page-module{
  top:-2rem;
}
.black-header .logo {
  filter:invert(1);
}
.gradient-to-black{
  background: linear-gradient(0deg,hsla(0,0%,9%,0),hsla(0,0%,9%,.55) 20%, hsla(0,0%,9%,.75) 40%,hsla(0,0%,9%,.96) 75%,hsla(0,0%,9%,.99));
}
.deposit-accordion *{
   background: transparent;
   text-transform: none;
}
.deposit-accordion svg{
        top: -3px;
    vertical-align: middle;
    position: relative;
    display: inline-block;
}
.rte .deposit-accordion h2{
text-transform: none;
}
.deposit-accordion {
  border-top: 1px solid #000000;
  border-bottom: 1px solid #000000;
}

.whats-included-accordion p{
  font-size: 1.25rem;
  line-height: 120%;
  letter-spacing: -0.1px;
  padding-left: 3vw;
}

.whats-included-accordion p:before {
  content: "–";
  @apply absolute left-0;
}

#refundable-text-span, .home-deposit-module #spots-remaining-count span{
  color:#000000;
}
#refundable-text-span {
  margin-top: 0.16rem;
}
#deposit-text-span .discount-container{
  color:white;
}

#terms.alert::after{
  content:"* ";
  color:#FF3131;
  position: relative;
  margin-left:5px;
  display: inline-block;
}
#terms.alert *{
  color:#FF3131;
}
.white-box{
  box-shadow: 0px 0px 10px rgb(255 255 255 / 50%)
}


.option-button-checkout{
 /* text-transform: none;*/
  background: transparent;
  border:1px solid #000000;
  padding:0.75rem 0;
  padding-left:40px;
  line-height: 0.1;
  display: inline-block;
  vertical-align: middle;
}


.special-stripe{
/*  background-image: url(./stripe-icons-01.png);*/
  background-size: 85%;
  background-repeat:no-repeat;
  background-position:center center;
}
.special-stripe[disabled]{
/*  background-image: url(./stripe-icons2-01.png);*/
}
.bit-stripe[disabled]{
/*  background-image: url(./bit-icons2-01.png);*/
}
.discount-container{
  margin-bottom:0;
  display: inline-block;
  position: relative;
}
.spring-green-line{
  height:8px;
  background:#66ff00;
  width: 2.55em;
    left: -2.65em;
    top: 0.55em;
  position:absolute;
  display:inline-block;
}

.click-area{
  background: transparent;
  width:100vw;
  height:100vh;
  position: fixed;
}
#checkout-button-1{
  width:128px;
}
#checkout-button-2{
  width:150px;
  text-align:left;
}
.e-checkbox + a{
  border-bottom:2px solid;
}
label.terms-agreement{
  text-transform: none;
  margin-left:20px;
  padding-left:0;
  color:#000000;
}
.terms-agreement a{
  text-transform: none;
  color:#000000;
  border-bottom:1px solid;
}
#thin-minus{
  height:1px;
  width: 23px;
  vertical-align: middle;
  background: black;
  display: inline-block;
}


/*REFUND POPUP*/
.calendly-contact{
  margin-top: -0.75em;
}
@keyframes slideInFromBottomRefund {
  0% {
    transform: translateY(100%);
    visibility: visible;
  }
  100% {
    transform: translateY(0);
    visibility: visible;
  }
}

@keyframes appearFromZeroRefund {
  0% {
   opacity: 0;
   visibility: hidden;
  }
  100% {
   opacity: 1;
   visibility: visible;
  }
}
.refund-popup-inner{
  z-index: 9999;
}
.refund-popup{
  opacity: 0;
  top: calc(50% - 10rem);
  left:calc(50% - 14rem);
  visibility: hidden;
  animation: 1s ease-out 0.5s 1 appearFromZeroRefund;
  z-index: 9999999999;
  animation-fill-mode: forwards;
  box-shadow: 0px 1px 11px rgb(0 0 0 / 60%);
}
.refund-popup-overlay{
  display: block;
  content:" ";
  position: fixed;
  left:0;
  top:0;
  width: 100vw;
  height:100vh;
  background: rgba(0,0,0,0.5);
  z-index: 100;
  visibility: hidden;
  opacity: 0;
  animation: 1s ease-out 0.5s 1 forwards appearFromZeroRefund;
}
.refund-close{
  outline: none;
  width: 32px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  position: absolute;
  top: 8px;
  right: 2px;
}
.refund-popup button[type="submit"]{
  line-height:0.2em !important;
}
.home-deposit-module .refund-popup *{
  color:black;
}
.refund-close svg{
  width: 12px;
    height: 12px;
    color: currentColor;
    display: inline-block;
    vertical-align: middle;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}


@media(max-width: 767px){
  .refund-popup{
    opacity: 1;
    z-index: 9999;
    visibility: hidden;
    left:0;
    top:auto;
    bottom:0;
    animation: 1s ease-out 0.5s 1 forwards slideInFromBottomRefund;
  }
  .refund-popup-overlay{
    display: none;
  }
}
/* END REFUND POPUP*/
@media(max-width:767px){
  .home-deposit-module  #refund-message {
    margin-top:0;
  }
.deposit-accordion svg{
      top: -1px;
      width:15px;
    position: relative;
}
#thin-minus{
  height:1px;
  width: 12px;
  vertical-align: middle;
  background: black;
  display: inline-block;
}

label.terms-agreement{
  margin-left:10px;
}


    .e-checkbox + a{
    display: inline-block;
  border-bottom:1px solid;
  }
  .home-deposit-module::before{
    left: -1.25rem;
  }
  .option-button-checkout, .terms-agreement, .terms-agreement a{
    font-size:14px;
  }

  
  .spring-green {
    color: #66ff00;
    position: relative;

  }


  .spring-green-line{
    height:4px;
  }
  .membership-deposit{
      max-width:300px;
    }
    .floor-plan-cap br{
    display:none;
  }
}

